# xresloader-examples

./: .gitignore  .gitmodules  CMakeLists.txt
common/: gen.bat  sample.pb
common/proto/: base.proto  kind.proto  quest.proto  xresloader.proto
config/: PrepareGUI.py  custom-selector.json  gen.bat  sample.xml  start.bat
config/excel/: objects.xlsx  quests.xlsx
config/sample-data/: objects_cfg.json  quests_cfg.json  role_upgrade_cfg.json
config/xresconv-cli-1.3.1/: HISTORY.md  README.md  xresconv-cli.py
doc/: readme.md
server/: build.bat  main.cpp
server/cfgsrc/: config_easy_api.cpp  config_easy_api.h  config_manager.cpp  config_manager.h  config_set_objects_cfg.cpp  config_set_objects_cfg.h  config_set_quests_cfg.cpp  config_set_quests_cfg.h  config_set_role_upgrade_cfg.cpp  config_set_role_upgrade_cfg.h  pool.cpp  pool.h
server/pbsrc/: base.pb.cc  base.pb.h  genstruct.pb.cc  genstruct.pb.h  kind.pb.cc  kind.pb.h  quest.pb.cc  quest.pb.h  xresloader.pb.cc  xresloader.pb.h  xresloader_ue.pb.cc  xresloader_ue.pb.h
tools/: CMakeLists.txt  build.bat  desc.cpp  desc.h  main.cpp  pbdesc.txt
tools/cfgsrc/: base.h  build.bat  kind.h  main.cpp  quest.h
